fix content spacing

--- a/src/assets/css/components/episode-content.scss
+++ b/src/assets/css/components/episode-content.scss
@@ -46,6 +46,10 @@
 
     figure, video {
       margin: $spacing-12 0;
+
+      @media (max-width: $sm) {
+        margin: $spacing-6 0;
+      }
     }
 
     em {
@@ -54,8 +58,8 @@
 
     hr {
       width: 100%;
-      max-width: 38rem;
-      border: 1px solid $gray;
+      max-width: $spacing * 80;
+      border: calc(#{$spacing} / 2) solid $grayish;
       margin: $spacing-8 0;
     }
 
@@ -113,6 +117,7 @@
     justify-content: space-between;
 
     @media (max-width: $sm) {
+      margin: $spacing-6 0;
       flex-direction: column;
     }
 
@@ -123,10 +128,18 @@
         max-width: 100%;
       }
     }
+
+    figure {
+      margin: 0;
+    }
   }
 
   .carousel {
     margin: $spacing-12 0;
+
+    @media (max-width: $sm) {
+      margin: $spacing-6 0;
+    }
 
     .item {
       width: 100%;
